# Takion

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  appveyor.yml
CMake/: CompileOptions.cmake
Includes/CubbyDNN/: Initializers.hpp  NumberSystem.hpp  Optimizers.hpp
Includes/CubbyDNN/Layers/: AbstractLayer.hpp  Activations.hpp  Functions.hpp  NN.hpp
Includes/CubbyDNN/Matrix/: Math.hpp  Matrix.hpp
Includes/cubbydnn/Arthimetics/: Arithmetic.hpp  Arthimetic.hpp
Includes/cubbydnn/ExcecutionFunctions/: Reticifiers.hpp  Sigmoids.hpp  SoftMax.hpp
Includes/cubbydnn/Preprocess/: Image.hpp
Includes/cubbydnn/String/: String.hpp
Includes/cubbydnn/Tensors/: TensorData.hpp
Includes/cubbydnn/Types/: Endian.hpp  Posit.hpp  TypeCast.hpp  bFloat16.hpp
Scripts/: azure_pipelines_build_macos.yml  azure_pipelines_build_windows.yml  travis_build.sh
Sources/Types/: TypeCast.cpp  bFloat16.cpp
Sources/cubbydnn/: CMakeLists.txt
Sources/cubbydnn/Arthimetics/: Arithmetic.cpp  Arthimetic.cpp
Sources/cubbydnn/Preprocess/: Image.cpp
Tests/ImageTests/: CMakeLists.txt  LoadImage.cpp
Tests/UnitTests/: ActivationTests.cpp  CMakeLists.txt  NNTests.cpp
Tests/UnitTests/GraphTest/: SimpleGraphTest.hpp
